Changed Collector.collect on toList method, changed @Data lombock annotation on Getter, Setter